--- a/InternshipManagementSystem/Client/src/components/loader/loader.css
+++ b/InternshipManagementSystem/Client/src/components/loader/loader.css
@@ -1,4 +1,4 @@
-.preloader {
+.preloader1 {
     top: 0;
     bottom: 0;
     left: 0;
@@ -9,7 +9,7 @@
     z-index: 99999999999999999;
 }
 
-.preloader > .status {
+.preloader1 > .status {
     position: absolute;
     left: 50%;
     top: 45%;
