--- a/InternshipManagementSystem/Client/src/Forms/FormI_1A/formI_1A.css
+++ b/InternshipManagementSystem/Client/src/Forms/FormI_1A/formI_1A.css
@@ -1,11 +1,11 @@
 {/*FormI1A*/}
 #ia{
     max-width: 800px;
-    background: #FAFAFA;
     padding: 30px;
     margin: 50px auto;
     border-radius: 1px;
     border: 1px solid #305A72;
+    background: #CD5C5C;
 }
 
 form label, form input {
