--- a/InternshipManagementSystem/Client/src/Forms/FormI6/formI_16.css
+++ b/InternshipManagementSystem/Client/src/Forms/FormI6/formI_16.css
@@ -1,21 +1,9 @@
 {/*FormI6*/}
-#ia{
+#example1 {
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 25px;
     max-width: 800px;
-    background: #FAFAFA;
     padding: 30px;
     margin: 50px auto;
-    border-radius: 1px;
-    border: 1px solid #305A72;
-}
-
-form label, form input {
-    display: block;
-//margin-bottom: 10px;
-    width: 90%
-}
-
-form input {
-    padding: 10px;
-    border: solid 1px #BDC7D8;
-
 }
